fix border on mobile

--- a/src/app/_shared-components/PostDetails/PostDetails.module.scss
+++ b/src/app/_shared-components/PostDetails/PostDetails.module.scss
@@ -15,7 +15,7 @@
 }
 
 .descBox {
-	@apply rounded-none bg-bg_modal p-4 shadow-lg lg:rounded-xl lg:p-6;
+	@apply rounded-xl bg-bg_modal p-4 shadow-lg lg:p-6;
 }
 
 .commentsBox {
